Added Linux focus and idea for Windows focus